--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
 								<p>Semana a semana aprenderemos sobre diferentes tópicos de la fabricacn digital y los plasmaremos en diferentes tareas.</p>
 								<div class="features">
 									<article>
-										<a href="#" class="image"><img src="2.jpg" alt="" /></a>
+										<a href="cad.html" class="image"><img src="2.jpg" alt="" /></a>
 										<div class="inner">
 											<h4>Semana 1</h4>
 											<h4>Diseño asistido por computadora CAD</h4>
